force-app/main/default/objects/Product2/fields/AnnualBulkBillingProduct__c.field-meta.xml
<CustomField>
    <fullName>AnnualBulkBillingProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>年間一括支払い用商品</label>
    <type>Checkbox</type>
</CustomField>