force-app/main/default/objects/Product2/fields/AnnualMonthlyPrice__c.field-meta.xml
<CustomField>
    <fullName>AnnualMonthlyPrice__c</fullName>
    <label>年契約用月額料金</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>