force-app/main/default/objects/Product2/fields/AnnualMonthlyProduct__c.field-meta.xml
<CustomField>
    <fullName>AnnualMonthlyProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>年契約月単位商品</label>
    <type>Checkbox</type>
</CustomField>