force-app/main/default/objects/Product2/fields/BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequency__c</fullName>
    <label>請求頻度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>