force-app/main/default/objects/Product2/fields/BillingTiming__c.field-meta.xml
<CustomField>
    <fullName>BillingTiming__c</fullName>
    <label>請求タイミング</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>毎月</fullName><default>false</default><label>毎月</label></value>
            <value><fullName>年一括</fullName><default>false</default><label>年一括</label></value>
            <value><fullName>初回のみ</fullName><default>false</default><label>初回のみ</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>