force-app/main/default/objects/Product2/fields/Freee_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Freee_Item_Id__c</fullName>
    <label>Freee品目ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>