force-app/main/default/objects/Product2/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>価格</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>