force-app/main/default/objects/Product2/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>商品種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>継続費用</fullName>
            </value>
            <value>
                <fullName>初期費用</fullName>
            </value>
            <value>
                <fullName>オプション</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>