force-app/main/default/objects/Product2/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <defaultValue>10</defaultValue>
    <label>税</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>