force-app/main/default/objects/Product2/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>単位</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>