force-app/main/default/objects/Product2/listViews/Rendery.listView-meta.xml
<ListView>
    <fullName>Rendery</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>UnitPrice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Rendery</value>
    </filters>
    <label>Rendery</label>
</ListView>